# zendesk-hc-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/zendesk_hc_mcp/: __init__.py  client.py  helpers.py  server.py  tools.py
tests/: test_client.py  test_helpers.py  test_tools.py
