[project]
name = "zendesk-hc-mcp"
version = "1.0.0"
description = "MCP server for querying Zendesk Help Center APIs (read-only)"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp[cli]",
    "httpx",
    "hishel[async]",
    "markdownify",
]

[project.scripts]
zendesk-hc-mcp = "zendesk_hc_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zendesk_hc_mcp"]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest",
    "pytest-asyncio",
    "pytest-cov>=7.1.0",
    "respx",
]
